# matrix

./: CMakeLists.txt  README.md  config.h.in
cannon/: CMakeLists.txt  cannon.c
cmake/: FindFunctions.cmake  FindHeaders.cmake  FindLibraries.cmake  FindSymbols.cmake  TestCompiler.cmake
summa/: CMakeLists.txt  summa.c
test/: 10x10.txt  16x16.txt  3x3.txt  4x4.txt  6x6.txt
